# softArch

softArchProd/: CMakeLists.txt  DEVELOP.md  Dockerfile  Makefile  README.md  docker-compose.yml  run-delivery.sh  run-user.sh
softArchProd/common/config/: config.cpp  config.h
softArchProd/common/database/: Cache.cpp  Cache.h  Delivery.cpp  Delivery.h  Product.cpp  Product.h  User.cpp  User.h  database.cpp  database.h
softArchProd/common/utils/: utils.h
softArchProd/delivery-service/: delivery_handler.cpp  delivery_handler.h  http_request_factory.cpp  http_request_factory.h  index.yaml  main.cpp  product_handler.cpp  product_handler.h
softArchProd/docker/: Dockerfile_build  docker-compose.yml
softArchProd/docker/mysql/: Dockerfile
softArchProd/docker/mysql/mysql.conf.d/: mysqld.cnf
softArchProd/docker/proxysql/: Dockerfile  proxysql.cnf
softArchProd/test/: data.json  get_all_deriveries.py  get_all_users.py  insert_delivery_data.py  insert_user_data.py  test_delivery.py  test_user.py
softArchProd/user-service/: http_request_factory.cpp  http_request_factory.h  index.yaml  main.cpp  user_handler.cpp  user_handler.h
